--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "meuApp",
+    "name": "reservas",
     "slug": "meuApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/iconesenai.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
