--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-module-scripts": "^4.1.7",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
