--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "reservas",
+    "name": "StockSenai",
     "slug": "meuApp",
     "version": "1.0.0",
     "orientation": "portrait",
