--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.8.1",
+    "buffer": "^6.0.3",
     "expo": "~52.0.35",
+    "expo-file-system": "~18.0.12",
     "expo-module-scripts": "^4.1.7",
     "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
