--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "axios": "^1.8.1",
+    "axios": "^1.12.2",
     "expo": "~52.0.35",
+    "expo-image-picker": "^17.0.8",
     "expo-module-scripts": "^4.1.7",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
@@ -27,7 +28,8 @@
     "react-native-reanimated": "^3.17.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-camera": "~16.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
