--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-picker/picker": "^2.11.2",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "buffer": "^6.0.3",
-    "expo": "~52.0.35",
-    "expo-file-system": "~18.0.12",
     "axios": "^1.12.2",
-    "expo-image-picker": "^17.0.8",
+    "buffer": "^6.0.3",
+    "expo": "~52.0.47",
+    "expo-camera": "~16.0.18",
+    "expo-file-system": "~18.0.12",
+    "expo-image-picker": "~16.0.6",
     "expo-module-scripts": "^4.1.7",
     "expo-secure-store": "~14.0.1",
     "expo-sharing": "~13.0.1",
@@ -25,14 +26,13 @@
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.17.0",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.1",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-camera": "~16.0.18"
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
